# fibonacci

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  structures.rs  traits.rs
