[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

# Mutually exclusive features:
# cargo b -r && cargo install --path=. --features args_v1
# cargo b -r && cargo install --path=. --features args_v2

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
debug = true            # debug info at all.
strip = "symbols"       # Strip symbols from a binary.
opt-level = 3           # All optimizations.
overflow-checks = true  # Panic will occur on overflow.
lto = true              # Enable link time optimization.
codegen-units = 1       # Use a single codegen for size optimization.
panic = "abort"         # Remove traceback information.
incremental = true      # Save information to disk, improving re-compile times.

[profile.dev]
opt-level = 1           # Use slightly better optimizations.